# Things-done-cannot-be-undone

./: CMakeLists.txt
res/Shaders/: fragment.txt
src/: main.cpp
src/Renderer/: ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h
src/Resources/: ResourceManager.cpp  ResourceManager.h
